fix: leaderboard alignment

--- a/frontend/src/styles/animations.scss
+++ b/frontend/src/styles/animations.scss
@@ -542,9 +542,9 @@
 }
 
 
-$first-place-height: 25vh;
-$second-place-height: 19vh;
-$third-place-height: 18vh;
+$first-place-height: 27vh;
+$second-place-height: 21vh;
+$third-place-height: 19.5vh;
 
 @mixin rise-up($name, $height, $delay) {
   @keyframes rise-up-#{$name} {
